--- a/src/index.css
+++ b/src/index.css
@@ -1,21 +1,14 @@
 @import 'modern-normalize/modern-normalize.css';
 
 body {
+  font-family: 'Roboto';
+  font-size: 18px;
+  line-height: 1.2;
+  background-color: aquamarine;
+}
+
+ul {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
-
-img {
-  display: block;
-  max-width: 100%;
-  height: auto;
+  padding: 0;
+  list-style: none;
 }
